# workenv

./: README.md  setup.sh  setupall.sh  test.sh  vim
.xenvetc/: config.sh
algorithms/: C-Plus-Plus.git  CLRS.git  Java.git  Javascript.git  Python.git  README.md  Scala.git  algorithms_in_ipython_notebooks.git  algos.git  cppalgo.git  mybook  setup.sh  x  xeus-cling.git
apm/: app_dynamics  datadog  dynatrace  newrelic
app/: README.md
asciidoc/: README.md
asdf/: README.md  setup.sh
book/: README.md
brew/: setup.sh
bruno/: README.md
busybox/: setup.sh
clang/: setup.sh
cmake/: README.md  hsf-training-cmake-webpage.git  modern-cmake.git  qstart  setup.sh  tutorial
conan/: README.md  setup.sh
cook/: README.md
cppman/: README.md  operator_overloading  setup.sh
docker/: setup.sh  tutorial
elasticsearch/: 2  README.md  setup.sh
elk/: elasticsearch  logstash
emoji/: setup.sh
encoding/: README.md  cppman.out
etc/: config.sh  env.sh
find/: setup.sh
gcalcli/: README.md  setup.sh
gcm/: setup.sh
git/: README.md  setup.sh
global/: setup.sh
graphql/: README.md
graphviz/: README.md  setup.sh
haskell/: README.md  setup.sh
ide/: README.md
iterm2/: README.md  setup.sh
json/: README.md
jupyter/: README.md  cling-docker  setup.sh  xeus-cling.git
lang/cpp/googletest/etc/samplegtest/: .gitignore  CMakeLists.txt  a_test.cc  run.sh  sample_test.cc
leetcode/: setup.sh
lib/: all_app.sh  commands.sh  curenv.sh  env_utils.sh  envframework.1.sh  envframework.sh  setup_all_apps_funcs.sh  setup_one_app_funcs_base.sh  setups.sh  utils.sh  (+2 more)
(+510 files in other folders)
